registration, login endpoints

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/librarydb
-spring.datasource.username=postgres
-spring.datasource.password=45689
+spring.datasource.url=jdbc:postgresql://localhost:6420/librarydb
+spring.datasource.username=myuser
+spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+google.books.api.key=AIzaSyBHqff2IjKw_qjdYf5QqadyVSZ2QB8kauI
